--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="header1">
         <h1>The Creative Crew</h1>
       </div>
+
       <div class="header2">
         <h3>Who we are</h3>
         <p>
@@ -20,11 +21,12 @@
         </p>
       </div>
     </header>
+
     <main>
       <div class="card">
         <div class="card1">
-          <div class="image images1">
-            <img src="./img/photo1.png" alt="" />
+          <div>
+            <img src="./img/photo1.png" alt="Bill Mahoney" />
           </div>
           <div class="name">Bill Mahoney</div>
           <div class="job">PRODUCT OWNER</div>
@@ -33,20 +35,18 @@
 
       <div class="card">
         <div class="card2">
-          <!-- <div class="image images2"> -->
           <div>
-            <img src="./img/photo2.png" alt="" />
+            <img src="./img/photo2.png" alt="Saba Cabrera" />
           </div>
           <div class="name">Saba Cabrera</div>
           <div class="job">ART DIRECTOR</div>
-          <!-- </div> -->
         </div>
       </div>
 
       <div class="card">
         <div class="card3">
-          <div class="image">
-            <img src="./img/photo3.png" alt="" />
+          <div>
+            <img src="./img/photo3.png" alt="Shae Le" />
           </div>
           <div class="name">Shae Le</div>
           <div class="job">TECH LEAD</div>
@@ -55,8 +55,8 @@
 
       <div class="card">
         <div class="card4">
-          <div class="image">
-            <img src="./img/photo4.png" alt="" />
+          <div>
+            <img src="./img/photo4.png" alt="Sylah Lu" />
           </div>
           <div class="name">Sylah Lu</div>
           <div class="job">UX DESINGER</div>
@@ -65,8 +65,8 @@
 
       <div class="card">
         <div class="card5">
-          <div class="image">
-            <img src="./img/photo5.png" alt="" />
+          <div>
+            <img src="./img/photo5.png" alt="Griff Richards" />
           </div>
           <div class="name">Griff Richards</div>
           <div class="job">DEVELOPER</div>
@@ -75,29 +75,12 @@
 
       <div class="card">
         <div class="card6">
-          <div class="image">
-            <img src="./img/photo6.png" alt="" />
+          <div>
+            <img src="./img/photo6.png" alt="Stan John" />
           </div>
           <div class="name">Stan John</div>
           <div class="job">DEVELOPER</div>
         </div>
-      </div>
-
-      <div class="image images3">
-        <!-- <img src="./img/photo3.png" alt="" /> -->
-        <!-- <p>Shae Le</p> -->
-      </div>
-      <div class="image images4">
-        <!-- <img src="./img/photo4.png" alt="" /> -->
-        <!-- <p>Skylah Lu</p> -->
-      </div>
-      <div class="image images5">
-        <!-- <img src="./img/photo5.png" alt="" /> -->
-        <!-- <p>Griff Richards</p> -->
-      </div>
-      <div class="image images6">
-        <!-- <img src="./img/photo6.png" alt="" /> -->
-        <!-- <p>Stan John</p> -->
       </div>
     </main>
   </body>
